--- a/Proof of Concept Game/Assembly-CSharp.csproj
+++ b/Proof of Concept Game/Assembly-CSharp.csproj
@@ -53,6 +53,7 @@
      <Compile Include="Assets\Scripts\Dialogue\OptionButton.cs" />
      <Compile Include="Assets\Scripts\Dialogue\SimpleJSON.cs" />
      <Compile Include="Assets\Scripts\DialogueVisuals.cs" />
+     <Compile Include="Assets\Scripts\DoorSceneChange.cs" />
      <Compile Include="Assets\Scripts\Dumb Stuff Andrew Tried\DetermineTextDisplay.cs" />
      <Compile Include="Assets\Scripts\Dumb Stuff Andrew Tried\GenerateText.cs" />
      <Compile Include="Assets\Scripts\Dumb Stuff Andrew Tried\StringsToDisplay.cs" />
